--- a/account/templates/base.html
+++ b/account/templates/base.html
@@ -6,6 +6,26 @@
     <title>{% block title %}{% endblock %}</title>
     <link href="{% static 'css/base.css' %}" rel="stylesheet">
 </head>
+<script src="http://libs.baidu.com/jquery/2.1.4/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>   <!-- 加载jQuery Cookie插件 -->
+<script>
+    var csrftoken = $.cookie('csrftoken');
+    function csrfSafeMethod(method){
+        // 下面的请求方法不需要csrftoken验证
+        return (/^(GET|HEAD|OPTIONS|TRACE)$/.test(method));
+    };
+    $.ajaxSetup({
+        beforeSend: function(xhr, settings){
+            if(!csrfSafeMethod(settings.type) && !this.crossDomain){
+                xhr.setRequestHeader("X-CSRFToken", csrftoken);
+            }
+        }
+    });
+    $(document).ready(function(){
+        {% block domready %}
+        {% endblock %}
+    });
+</script>      <!-- 实现继承这个html模板的模板动态加载js脚本 -->
 <body>
     <div id="header">
         <span class="logo">Bookmarks</span>
@@ -15,10 +35,10 @@
                     <a href="{% url 'dashboard' %}">My Dashboard</a>
                 </li>
                 <li {% if section == "images" %}class="selected"{% endif %}>
-                    <a href="#">Images</a>
+                    <a href="{% url 'images:list' %}">Images</a>
                 </li>
                 <li {% if section == "people" %}class="selected"{% endif %}>
-                    <a href="#">People</a>
+                    <a href="{% url 'user_list' %}">People</a>
                 </li>
             </ul>
         {% endif %}
